--- a/index.html
+++ b/index.html
@@ -1,3 +1,44 @@
-<body>
-<h2> Ram Mohan 222 <h2>
-<body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <title>Ram Mohan</title>
+  </head>
+  <body>
+    <div class="container">
+        <h1>Ram Mohan</h1>
+        <div class="card">
+            <div class="card-header">
+                Skills
+            </div>
+            <div class="card-body">
+                <blockquote class="blockquote mb-0">
+                    <p>Fullstack Developer</p>
+                    <ul>
+                        <li>Java/Java EE</li>
+                        <li>Spring/Spring Boot Framework (MVC,JDBC,JPA,REST,Security)</li>
+                        <li>Maven</li>
+                        <li>Node Js (Express Js)</li>
+                        <li>React Js, Redux, Angular Js, JQuery and Ajax</li>
+                        <li>Amazon Web Services (Lambda, API Gateway, IOT, Kinesis, CloudWatch, EC2, IAM)</li>
+                        <li>My SQL</li>
+                    </ul>
+                    <footer class="blockquote-footer">Full Profile <i class="fab fa-linkedin"></i> <cite title="LinkedIn"><a href="https://www.linkedin.com/in/rammohan222/">here</a></cite></footer>
+                <blockquote>
+            </div>
+        </div>
+    </div>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  </body>
+</html>
