desing is modified

--- a/index.html
+++ b/index.html
@@ -22,34 +22,35 @@
             <img src="./assets/profile.jpg" class="rounded float-left" alt="..." height="100px">
           </div>
           <div class="col-sm-11">
-            <h3 style="padding-top:6%">Ram Mohan</h3>
+            <h3 style="padding-top:6%">Ram Mohan<small class="float-right"><small><i class="fas fa-envelope"></i>Email: ram222mohan@gmail.com</small></small></h3>
           </div>
           <div class="col-sm-12">
               <div class="card">
                   <div class="card-header">
-                      <h5>Full Name: Rama Mohana Rao. M</h5>
+                      <h5>Full Name: Rama Mohana Rao. M<small class="float-right"><i class="fas fa-briefcase"></i>Exp: 4+ years</small></h5>
+                      <span class="float-right"><strong>Working At:</strong><a href="https://www.neviton.com" target="_blank">Neviton Softech Private Limited</a></span>
                   </div>
                   <div class="card-body">
                       <blockquote class="blockquote mb-0">
-                          <h5>Skills</h5>
+                          <strong>Skills</strong>
                           <ul>
-                              <li>Java/Java EE</li>
-                              <li>Spring/Spring Boot Framework (MVC, JDBC, JPA, REST and Security)</li>
-                              <li>Maven</li>
-                              <li>Node Js</li>
-                              <li>React Js, Redux, Angular Js, JQuery and Ajax</li>
-                              <li>Amazon Web Services (Lambda, API Gateway, IOT, Kinesis, CloudWatch, EC2, IAM and S3)</li>
-                              <li>My SQL</li>
+                              <li><small>Java/Java EE</small></li>
+                              <li><small>Spring/Spring Boot Framework <b>(MVC, JDBC, JPA, REST and Security)</b></small></li>
+                              <li><small>Maven</small></li>
+                              <li><small>Node Js</small></li>
+                              <li><small>React Js, Redux, Angular Js, JQuery and Ajax</small></li>
+                              <li><small>Amazon Web Services <b> (Lambda, API Gateway, IOT, Kinesis, CloudWatch, EC2, IAM and S3)</b></small></li>
+                              <li><small>My SQL</small></li>
                           </ul>
-                          <h5>Education</h5>
+                          <strong>Education</strong>
                           <ul>
                               <li>Master of Computer Application (MCA), Computer Science. (2011 - 2014)</li>
-                                  <ul >
-                                    <li>From  J.K.C College (Acharya Nagarjuna University).</li>
+                                  <ul style="list-style-type:none;">
+                                    <li> <h6><i>- From  J.K.C College (Acharya Nagarjuna University).</i></h6></li>
                                   </ul>
                               <li>Bachelor of Science (B.Sc.), Computer Science. (2008 - 2011)</li>
-                                  <ul>
-                                      <li> From  Priyadarshini Degree College (Acharya Nagarjuna University).</li>
+                                  <ul style="list-style-type:none;">
+                                      <li> <h6><i> From  Priyadarshini Degree College (Acharya Nagarjuna University).</i></h6></li>
                                   </ul>
                           </ul>
                           <footer class="blockquote-footer">Full Profile <i class="fab fa-linkedin"></i> <cite title="LinkedIn"><a href="https://www.linkedin.com/in/rammohan222/">here</a></cite></footer>
