--- a/index.html
+++ b/index.html
@@ -36,10 +36,9 @@
                           <ul>
                               <li><small>Java/Java EE</small></li>
                               <li><small>Spring/Spring Boot Framework <b>(MVC, JDBC, JPA, REST and Security)</b></small></li>
-                              <li><small>Maven</small></li>
                               <li><small>Node Js</small></li>
                               <li><small>React Js, Redux, Angular Js, JQuery and Ajax</small></li>
-                              <li><small>Amazon Web Services <b> (Lambda, API Gateway, IOT, Kinesis, CloudWatch, EC2, IAM and S3)</b></small></li>
+                              <li><small>Amazon Web Services <b> (Lambda, API Gateway, Cognito, Kinesis, CloudWatch, EC2, IAM and S3)</b></small></li>
                               <li><small>My SQL</small></li>
                           </ul>
                           <strong>Education</strong>
@@ -53,7 +52,17 @@
                                       <li> <h6><i> From  Priyadarshini Degree College (Acharya Nagarjuna University).</i></h6></li>
                                   </ul>
                           </ul>
-                          <footer class="blockquote-footer">Full Profile <i class="fab fa-linkedin"></i> <cite title="LinkedIn"><a href="https://www.linkedin.com/in/rammohan222/">here</a></cite></footer>
+                          <footer class="blockquote-footer">Full Profile 
+                            <cite title="LinkedIn">
+                              <a href="https://www.linkedin.com/in/rammohan222">
+                                <i class="fab fa-linkedin"></i>
+                              </a>
+                            </cite>
+                            <cite>
+                                <a href="https://github.com/RamMohan222">
+                                  <i class="fab fa-github"></i>
+                                </a>
+                            </cite></footer>
                       <blockquote>
                   </div>
               </div>
