--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                   </ul>
                               <li>Bachelor of Science (B.Sc.), Computer Science. (2008 - 2011)</li>
                                   <ul style="list-style-type:none;">
-                                      <li> <h6><i> From  Priyadarshini Degree College (Acharya Nagarjuna University).</i></h6></li>
+                                      <li> <h6><i>- From  Priyadarshini Degree College (Acharya Nagarjuna University).</i></h6></li>
                                   </ul>
                           </ul>
                           <footer class="blockquote-footer">Full Profile 
