--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div class="col-sm-12">
               <div class="card">
                   <div class="card-header">
-                      <h5>Full Name: Rama Mohana Rao. M<small class="float-right"><i class="fas fa-briefcase"></i>Exp: 4+ years</small></h5>
+                      <h5>Full Name: Rama Mohana Rao. Molabanti<small class="float-right"><i class="fas fa-briefcase"></i>Exp: 4+ years</small></h5>
                       <span class="float-right"><strong>Working At:</strong><a href="https://www.neviton.com" target="_blank">Neviton Softech Private Limited</a></span>
                   </div>
                   <div class="card-body">
