--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <link href="./fontawesome-free-5.10.2-web/css/brands.css" rel="stylesheet">
     <link href="./fontawesome-free-5.10.2-web/css/solid.css" rel="stylesheet">
     <title>Ram Mohan</title>
+    <style>
+    .inline-headers h2, .inline-headers h5 {
+      display: inline-block;
+      vertical-align: baseline;
+    }
+    </style>
   </head>
   <body>
     <div class="container">
@@ -23,13 +29,26 @@
             <img src="./assets/profile.jpg" class="rounded float-left" alt="..." height="100px">
           </div>
           <div class="col-sm-11">
-            <h3 style="padding-top:6%">Ram Mohan<small class="float-right"><small><i class="fas fa-envelope"></i>Email: ram222mohan@gmail.com</small></small></h3>
+            <h3 style="padding-top:6%">Ram Mohan<small class="float-right"><small><i class="fas fa-envelope"></i> ram222mohan@gmail.com</small></small></h3>
           </div>
           <div class="col-sm-12">
               <div class="card">
                   <div class="card-header">
-                      <h5>Full Name: Rama Mohana Rao. Molabanti<small class="float-right"><i class="fas fa-briefcase"></i>Exp: 4+ years</small></h5>
-                      <span class="float-right"><strong>Working At:</strong><a href="https://www.neviton.com" target="_blank">Neviton Softech Private Limited</a></span>
+                      <div class="inline-headers">Full Name: <h5 class="display-10"> Rama Mohana Rao. Molabanti</h5><h6 class="float-right badge badge-success"><i class="fas fa-briefcase"></i> Exp: 4+ Years</h6></div>
+                      <span>
+                        Full Profile:
+                          <cite title="linkedin/RamMohan222">
+                            <a href="https://www.linkedin.com/in/rammohan222">
+                              <i class="fab fa-linkedin"></i>
+                            </a>
+                          </cite>
+                          <cite title="github/RamMohan222">
+                              <a href="https://github.com/RamMohan222">
+                                <i class="fab fa-github"></i>
+                              </a>
+                          </cite>
+                        <span class="float-right"><strong>Working At: </strong><a href="https://www.neviton.com" target="_blank">Neviton Softech Private Limited</a></span>
+                      </span>
                   </div>
                   <div class="card-body">
                       <blockquote class="blockquote mb-0">
@@ -53,7 +72,8 @@
                                       <li> <h6><i>- From  Priyadarshini Degree College (Acharya Nagarjuna University).</i></h6></li>
                                   </ul>
                           </ul>
-                          <footer class="blockquote-footer">Full Profile 
+                          <!-- <footer class="blockquote-footer">
+                            Full Profile 
                             <cite title="LinkedIn">
                               <a href="https://www.linkedin.com/in/rammohan222">
                                 <i class="fab fa-linkedin"></i>
@@ -63,7 +83,8 @@
                                 <a href="https://github.com/RamMohan222">
                                   <i class="fab fa-github"></i>
                                 </a>
-                            </cite></footer>
+                            </cite>
+                          </footer> -->
                       <blockquote>
                   </div>
               </div>
