momentjs is added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel='shortcut icon' href='./assets/profile.jpg' type='image/x-icon' />
+   
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="./fontawesome-free-5.10.2-web/css/all.css" rel="stylesheet">
@@ -14,6 +15,7 @@
     <link href="./fontawesome-free-5.10.2-web/css/fontawesome.css" rel="stylesheet">
     <link href="./fontawesome-free-5.10.2-web/css/brands.css" rel="stylesheet">
     <link href="./fontawesome-free-5.10.2-web/css/solid.css" rel="stylesheet">
+    
     <title>Ram Mohan</title>
     <style>
     .inline-headers h2, .inline-headers h5 {
@@ -34,7 +36,7 @@
           <div class="col-sm-12">
               <div class="card">
                   <div class="card-header">
-                      <div class="inline-headers">Full Name: <h5 class="display-10"> Rama Mohana Rao. Molabanti</h5><h6 class="float-right badge badge-success"><i class="fas fa-briefcase"></i> Exp: 4+ Years</h6></div>
+                      <div class="inline-headers">Full Name: <h5 class="display-10"> Rama Mohana Rao. Molabanti</h5><h6 class="float-right badge badge-success" id="exp"><i class="fas fa-briefcase"></i> Exp: 0 Years</h6></div>
                       <span>
                         Full Profile:
                           <cite title="linkedin/RamMohan222">
@@ -91,7 +93,7 @@
           </div>
         </div>
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/moment@2.25.3/moment.min.js"></script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -100,5 +102,8 @@
     <script defer src="./fontawesome-free-5.10.2-web/js/brands.js"></script>
     <script defer src="./fontawesome-free-5.10.2-web/js/solid.js"></script>
     <script defer src="./fontawesome-free-5.10.2-web/js/fontawesome.js"></script>
+    <script> 
+	    $('#exp').text("Exp: "+(moment(new Date()).diff(moment('2015-10-15','YYYY-MM-DD'),'months',true)/12).toFixed(1)+" Years")
+    </script>
   </body>
 </html>
