--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
                       <blockquote class="blockquote mb-0">
                           <strong>Skills</strong>
                           <ul>
-                              <li><small>Java/Java EE</small></li>
+                              <li><small>Java/Java EE, Servlet and JSP</small></li>
                               <li><small>Spring/Spring Boot Framework <b>(MVC, JDBC, JPA, REST and Security)</b></small></li>
-                              <li><small>Node Js</small></li>
-                              <li><small>React Js, Redux, Angular Js, JQuery and Ajax</small></li>
+                              <li><small>Node Js, Express Js, React Js, Redux, Angular Js, JQuery and Ajax</small></li>
                               <li><small>Amazon Web Services <b> (Lambda, API Gateway, Cognito, Kinesis, CloudWatch, EC2, IAM and S3)</b></small></li>
-                              <li><small>My SQL</small></li>
+                              <li><small>My SQL and Redis</small></li>
+			      <li><small>Jira, Eclipse, STS, VS Code, Jenkins, WinSCP, PuTTY, MySQL Workbench, postman and JMeter</small></li>
                           </ul>
                           <strong>Education</strong>
                           <ul>
