--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
           <div class="col-sm-1">
             <img src="./assets/profile.jpg" class="rounded float-left" alt="..." height="100px">
           </div>
-          <div class="col-sm-11">
-            <h3 style="padding-top:6%">Ram Mohan<small class="float-right"><small><i class="fas fa-envelope"></i> ram222mohan@gmail.com</small></small></h3>
+          <div class="col-sm-11" style="padding-top:5%">
+              <h3>Ram Mohan<small class="float-right"><small><i class="fas fa-envelope"></i><a href="mailto:ram222mohan@gmail"> ram222mohan@gmail.com</a></small><div><small><i class="fa fa-phone" aria-hidden="true"></i> +91 99666 50524</small></div></small></h3>
           </div>
           <div class="col-sm-12">
               <div class="card">
@@ -61,7 +61,7 @@
                               <li><small>Node Js, Express Js, React Js, Redux, Angular Js, JQuery and Ajax</small></li>
                               <li><small>Amazon Web Services <b> (Lambda, API Gateway, Cognito, Kinesis, CloudWatch, EC2, IAM and S3)</b></small></li>
                               <li><small>My SQL and Redis</small></li>
-			      <li><small>Jira, Eclipse, STS, VS Code, Jenkins, WinSCP, PuTTY, MySQL Workbench, postman and JMeter</small></li>
+			                        <li><small>Jira, Eclipse, STS, VS Code, Jenkins, WinSCP, PuTTY, MySQL Workbench, Postman and JMeter</small></li>
                           </ul>
                           <strong>Education</strong>
                           <ul>
