--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="col-sm-12">
               <div class="card">
                   <div class="card-header">
-                      <div class="inline-headers">Full Name: <h5 class="display-10"> Rama Mohana Rao. Molabanti</h5><h6 class="float-right badge badge-success" id="exp"><i class="fas fa-briefcase"></i> Exp: 0 Years</h6></div>
+                      <div class="inline-headers">Full Name: <h5 class="display-10"> Rama Mohana Rao. Molabanti</h5><h6 class="float-right badge badge-success" id="exp"><i class="fas fa-briefcase"></i></h6></div>
                       <span>
                         Full Profile:
                           <cite title="linkedin/RamMohan222">
