--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                           <ul>
                               <li><small>Java/Java EE, Servlet and JSP</small></li>
                               <li><small>Spring/Spring Boot Framework <b>(MVC, JDBC, JPA, REST and Security)</b></small></li>
-                              <li><small>Node Js, Express Js, React Js, Redux, Angular Js, JQuery and Ajax</small></li>
+                              <li><small>Node Js, Express Js, React Js, Redux, Angular, AngularJs, JQuery and Ajax</small></li>
                               <li><small>Amazon Web Services <b> (Lambda, API Gateway, Cognito, Kinesis, CloudWatch, EC2, IAM and S3)</b></small></li>
                               <li><small>My SQL and Redis</small></li>
 			                        <li><small>Jira, Eclipse, STS, VS Code, Jenkins, WinSCP, PuTTY, MySQL Workbench, Postman and JMeter</small></li>
