--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                 <i class="fab fa-github"></i>
                               </a>
                           </cite>
-                        <span class="float-right"><strong>Working At: </strong><a href="https://www.neviton.com" target="_blank">Neviton Softech Private Limited</a></span>
+                        <span class="float-right"><strong>Working At: </strong><a href="https://www.yash.com" target="_blank">YASH Technologies</a></span>
                       </span>
                   </div>
                   <div class="card-body">
