--- a/index.html
+++ b/index.html
@@ -57,11 +57,14 @@
                           <strong>Skills</strong>
                           <ul>
                               <li><small>Java/Java EE, Servlet and JSP</small></li>
-                              <li><small>Spring/Spring Boot Framework <b>(MVC, JDBC, JPA, REST and Security)</b></small></li>
+                              <li><small>Spring/SpringBoot Framework <b>(MVC, JDBC, JPA, REST and Security)</b></small></li>
+			      <li><small>Spring Cloud and Microservices, Consul <b>(Eureka Discovery Server/Client, Configuration, Ribbon, Hystrix, Feign and Zuul)</b> </small></li>	  
                               <li><small>Node Js, Express Js, React Js, Redux, Angular, AngularJs, JQuery and Ajax</small></li>
                               <li><small>Amazon Web Services <b> (Lambda, API Gateway, Cognito, Kinesis, CloudWatch, EC2, IAM and S3)</b></small></li>
-                              <li><small>My SQL and Redis</small></li>
-			                        <li><small>Jira, Eclipse, STS, VS Code, Jenkins, WinSCP, PuTTY, MySQL Workbench, Postman and JMeter</small></li>
+                              <li><small>My SQL, MongoDB and Redis</small></li>
+			      <li><small>Tomcat and Nginx</small></li>
+			      <li><small>Eslint, Prettier, SonarLint and SonarQube<	  
+			      <li><small>Jira, Eclipse, STS, VS Code, Jenkins, WinSCP, PuTTY, MySQL Workbench, Postman and JMeter</small></li>
                           </ul>
                           <strong>Education</strong>
                           <ul>
