--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                               <li><small>Amazon Web Services <b> (Lambda, API Gateway, Cognito, Kinesis, CloudWatch, EC2, IAM and S3)</b></small></li>
                               <li><small>My SQL, MongoDB and Redis</small></li>
 			      <li><small>Tomcat and Nginx</small></li>
-			      <li><small>Eslint, Prettier, SonarLint and SonarQube<	  
+			      <li><small>Eslint, Prettier, SonarLint and SonarQube</small></li>	  
 			      <li><small>Jira, Eclipse, STS, VS Code, Jenkins, WinSCP, PuTTY, MySQL Workbench, Postman and JMeter</small></li>
                           </ul>
                           <strong>Education</strong>
