--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                               <li><small>My SQL, MongoDB and Redis</small></li>
 			      <li><small>Tomcat and Nginx</small></li>
 			      <li><small>Eslint, Prettier, SonarLint and SonarQube</small></li>	  
-			      <li><small>Jira, Eclipse, STS, VS Code, Jenkins, WinSCP, PuTTY, OpenSSL, hashicorp/consul-template, MySQL Workbench, Postman and JMeter</small></li>
+			      <li><small>Jira, Eclipse, STS, VS Code, Jenkins, WinSCP, PuTTY, PM2, OpenSSL, hashicorp/consul-template, MySQL Workbench, Postman and JMeter</small></li>
                           </ul>
                           <strong>Education</strong>
                           <ul>
