--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                               <li><small>Java/Java EE, Servlet and JSP</small></li>
                               <li><small>Spring/SpringBoot Framework <b>(MVC, JDBC, JPA, REST and Security)</b></small></li>
 			      <li><small>Spring Cloud and Microservices, Hashicorp/Consul <b>(Eureka Discovery Server/Client, Configuration, Ribbon, Hystrix, Feign and Zuul)</b> </small></li>	  
-                              <li><small>Node Js, Express Js, React Js, Redux, Angular, AngularJs, JQuery and Ajax</small></li>
+                              <li><small>Prometheus, Grafana, wmi exporter</small></li>	  
+			      <li><small>Node Js, Express Js, React Js, Redux, Angular, AngularJs, JQuery and Ajax</small></li>
                               <li><small>Amazon Web Services <b> (Lambda, API Gateway, Cognito, Kinesis, Glue, Athena, CloudWatch, EC2, IAM and S3)</b></small></li>
                               <li><small>My SQL, MongoDB and Redis</small></li>
 			      <li><small>Tomcat and Nginx</small></li>
