--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
                                 <i class="fab fa-github"></i>
                               </a>
                           </cite>
+			  <cite title="medium/rammohan222">
+                              <a href="https://rammohan222.medium.com/">
+                                <i class="fab fa-medium"></i>
+                              </a>
+                          </cite>
 			  <cite title="Profile">
                               <a href="https://ram222mohan.com/RamMohan222">
                                 <i class="fas fa-user-circle"></i>
