--- a/index.html
+++ b/index.html
@@ -54,7 +54,12 @@
                                 <i class="fab fa-medium"></i>
                               </a>
                           </cite>
-			  <cite title="Profile">
+			  <cite title="hashnode.com/@rammohan222">
+                              <a href="https://hashnode.com/@rammohan222">
+                                <i class="fas fa-stop-circle fa-rotate-90"></i>
+                              </a>
+                          </cite>
+			  <cite title="GitHub/Profile">
                               <a href="https://ram222mohan.com/RamMohan222">
                                 <i class="fas fa-user-circle"></i>
                               </a>
