--- a/index.html
+++ b/index.html
@@ -40,27 +40,27 @@
                       <span>
                         Full Profile:
                           <cite title="linkedin/RamMohan222">
-                            <a href="https://www.linkedin.com/in/rammohan222">
+                            <a href="https://www.linkedin.com/in/rammohan222" target="_blank">
                               <i class="fab fa-linkedin"></i>
                             </a>
                           </cite>
                           <cite title="github/RamMohan222">
-                              <a href="https://github.com/RamMohan222">
+                              <a href="https://github.com/RamMohan222" target="_blank">
                                 <i class="fab fa-github"></i>
                               </a>
                           </cite>
 			  <cite title="medium/rammohan222">
-                              <a href="https://rammohan222.medium.com/">
+                              <a href="https://rammohan222.medium.com/" target="_blank">
                                 <i class="fab fa-medium"></i>
                               </a>
                           </cite>
 			  <cite title="hashnode.com/@rammohan222">
-                              <a href="https://hashnode.com/@rammohan222">
+                              <a href="https://hashnode.com/@rammohan222" target="_blank">
                                 <i class="fas fa-stop-circle fa-rotate-90"></i>
                               </a>
                           </cite>
 			  <cite title="GitHub/Profile">
-                              <a href="https://ram222mohan.com/RamMohan222">
+                              <a href="https://ram222mohan.com/RamMohan222" target="_blank">
                                 <i class="fas fa-user-circle"></i>
                               </a>
                           </cite>
