--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
                                 <i class="fas fa-user-circle"></i>
                               </a>
                           </cite>
+			  <cite title="Blog">
+                              <a href="https://blog.ram222mohan.com" target="_blank">
+                                <i class="fas fa-blog"></i>
+                              </a>
+                          </cite>
                         <span class="float-right"><strong>Working At: </strong><a href="https://www.yash.com" target="_blank">YASH Technologies</a></span>
                       </span>
                   </div>
