--- a/index.html
+++ b/index.html
@@ -90,13 +90,30 @@
                           <strong>Education</strong>
                           <ul>
                               <li>Master of Computer Application (MCA), Computer Science. (2011 - 2014)</li>
-                                  <ul style="list-style-type:none;">
-                                    <li> <h6><i>- From  J.K.C College (Acharya Nagarjuna University).</i></h6></li>
-                                  </ul>
+                              <ul style="list-style-type:none;">
+                                  <li> <h6><i>- From  J.K.C College (Acharya Nagarjuna University).</i></h6></li>
+                              </ul>
                               <li>Bachelor of Science (B.Sc.), Computer Science. (2008 - 2011)</li>
-                                  <ul style="list-style-type:none;">
-                                      <li> <h6><i>- From  Priyadarshini Degree College (Acharya Nagarjuna University).</i></h6></li>
-                                  </ul>
+                              <ul style="list-style-type:none;">
+                                  <li> <h6><i>- From  Priyadarshini Degree College (Acharya Nagarjuna University).</i></h6></li>
+                              </ul>
+                          </ul>
+			  <strong>Experience</strong>
+                          <ul>
+                              <li>Yash Technologies, Hyderabad, from 14-Aug-2020 to till current date.</li>
+                               <ul style="list-style-type:none;">
+                                  <li> <h6><i>- As a Module Lead.</i></h6></li>
+                               </ul>
+				  
+			       <li>Neviton Softech Pvt ltd, Bangalore, from 10-July-2017 to 6-Aug-2020.</li>
+                               <ul style="list-style-type:none;">
+                                  <li> <h6><i>- As a Senior Software Engineer</i></h6></li>
+                               </ul>
+				  
+                              <li>Sun KPO IT & Engineering Services, Hyderabad, from 15-Oct-2015 to 10-July-2017.</li>
+                              <ul style="list-style-type:none;">
+                                   <li> <h6><i>As a Software Engineer</i></h6></li>
+                              </ul>
                           </ul>
                           <!-- <footer class="blockquote-footer">
                             Full Profile 
