--- a/index.html
+++ b/index.html
@@ -77,15 +77,15 @@
                           <strong>Skills</strong>
                           <ul>
                               <li><small>Java/Java EE, Servlet and JSP</small></li>
-                              <li><small>Spring/SpringBoot Framework <b>(MVC, JDBC, JPA, REST and Security)</b></small></li>
-			      <li><small>Spring Cloud and Microservices, Hashicorp/Consul <b>(Eureka Discovery Server/Client, Configuration, Ribbon, Hystrix, Feign and Zuul)</b> </small></li>	  
-                              <li><small>Prometheus, Grafana, wmi exporter</small></li>	  
-			      <li><small>Node Js, Express Js, React Js, Redux, Angular, AngularJs, JQuery and Ajax</small></li>
-                              <li><small>Amazon Web Services <b> (Lambda, API Gateway, Cognito, Kinesis, Glue, Athena, CloudWatch, EC2, IAM and S3)</b></small></li>
-                              <li><small>My SQL, MongoDB and Redis</small></li>
-			      <li><small>Tomcat and Nginx</small></li>
-			      <li><small>Eslint, Prettier, SonarLint and SonarQube</small></li>	  
-			      <li><small>Jira, Eclipse, STS, VS Code, Jenkins, WinSCP, PuTTY, PM2, OpenSSL, hashicorp/consul-template, MySQL Workbench, Postman and JMeter</small></li>
+                              <li><small>Spring/SpringBoot Framework <b>(MVC, JDBC, JPA, REST and Security).</b></small></li>
+			      <li><small>Spring Cloud and Microservices, Hashicorp/Consul <b>(Eureka Discovery Server/Client, Configuration, Ribbon, Hystrix, Feign and Zuul).</b></small></li>	  
+                              <li><small>Prometheus, Grafana, wmi exporter.</small></li>	  
+			      <li><small>Node Js, Express Js, React Js, Redux, Angular, AngularJs, JQuery and Ajax.</small></li>
+                              <li><small>Amazon Web Services <b> (Lambda, API Gateway, Cognito, Kinesis, Glue, Athena, CloudWatch, EC2, IAM and S3).</b></small></li>
+                              <li><small>My SQL, MongoDB and Redis.</small></li>
+			      <li><small>Tomcat and Nginx.</small></li>
+			      <li><small>Eslint, Prettier, SonarLint and SonarQube.</small></li>	  
+			      <li><small>Jira, Eclipse, STS, VS Code, Jenkins, WinSCP, PuTTY, PM2, OpenSSL, hashicorp/consul-template, MySQL Workbench, Postman and JMeter.</small></li>
                           </ul>
                           <strong>Education</strong>
                           <ul>
@@ -100,19 +100,19 @@
                           </ul>
 			  <strong>Experience</strong>
                           <ul>
-                              <li>Yash Technologies, Hyderabad, from 14-Aug-2020 to till current date.</li>
+                              <li><small>Yash Technologies, Hyderabad, from 14-Aug-2020 to till current date.</small></li>
                                <ul style="list-style-type:none;">
-                                  <li> <h6><i>- As a Module Lead.</i></h6></li>
+                                  <li> <h6><i>- As a Module Lead</i></h6></li>
                                </ul>
 				  
-			       <li>Neviton Softech Pvt ltd, Bangalore, from 10-July-2017 to 6-Aug-2020.</li>
+			       <li><small>Neviton Softech Pvt ltd, Bangalore, from 10-July-2017 to 6-Aug-2020.</small></li>
                                <ul style="list-style-type:none;">
                                   <li> <h6><i>- As a Senior Software Engineer</i></h6></li>
                                </ul>
 				  
-                              <li>Sun KPO IT & Engineering Services, Hyderabad, from 15-Oct-2015 to 10-July-2017.</li>
+                              <li><small>Sun KPO IT & Engineering Services, Hyderabad, from 15-Oct-2015 to 10-July-2017.</small></li>
                               <ul style="list-style-type:none;">
-                                   <li> <h6><i>As a Software Engineer</i></h6></li>
+                                   <li> <h6><i>- As a Software Engineer</i></h6></li>
                               </ul>
                           </ul>
                           <!-- <footer class="blockquote-footer">
