--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                 <i class="fas fa-blog"></i>
                               </a>
                           </cite>
-                        <span class="float-right"><strong>Working At: </strong><a href="https://www.yash.com" target="_blank">YASH Technologies</a></span>
+                        <span class="float-right"><strong>Working At: </strong><a href="https://www.valuelabs.com/" target="_blank">ValueLabs</a></span>
                       </span>
                   </div>
                   <div class="card-body">
@@ -100,7 +100,12 @@
                           </ul>
 			  <strong>Experience</strong>
                           <ul>
-                              <li><small>Yash Technologies, Hyderabad, from 14-Aug-2020 to till current date.</small></li>
+			       <li><small>ValueLabs, Hyderabad, from 3-May-2022 to till current date.</small></li>
+                               <ul style="list-style-type:none;">
+                                  <li> <h6><i>- As a Module Lead</i></h6></li>
+                               </ul>
+				  
+                              <li><small>Yash Technologies, Hyderabad, from 14-Aug-2020 to 3-May-2022</small></li>
                                <ul style="list-style-type:none;">
                                   <li> <h6><i>- As a Module Lead</i></h6></li>
                                </ul>
