--- a/index.html
+++ b/index.html
@@ -155,5 +155,7 @@
 	  console.log('totalMonths:', totalMonths, 'years:',years,'months',months);  
 	  $('#exp').text("Exp: "+years+"."+months+" Years");
     </script>
+    <link href="https://cdn.jsdelivr.net/gh/RamMohan222/web-widget-metrics-info@v1.0.3/output/index.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/gh/RamMohan222/web-widget-metrics-info@v1.0.3/output/index.js"></script>
   </body>
 </html>
