--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                           <ul>
 			       <li><small>ValueLabs, Hyderabad, from 3-May-2022 to till current date.</small></li>
                                <ul style="list-style-type:none;">
-                                  <li> <h6><i>- As a Module Lead</i></h6></li>
+                                  <li> <h6><i>- As a System Analyst</i></h6></li>
                                </ul>
 				  
                               <li><small>Yash Technologies, Hyderabad, from 14-Aug-2020 to 3-May-2022</small></li>
