--- a/index.html
+++ b/index.html
@@ -93,16 +93,17 @@
                       <blockquote class="blockquote mb-0">
                           <strong>Skills</strong>
                           <ul>
-                              <li><small>Java/Java EE, Servlet and JSP</small></li>
+                              <li><small>Java, Java EE, Servlet, JSP and JSTL</small></li>
                               <li><small>Spring/SpringBoot Framework <b>(MVC, JDBC, JPA, REST and Security).</b></small></li>
 			      <li><small>Spring Cloud and Microservices, Hashicorp/Consul <b>(Eureka Discovery Server/Client, Configuration, Ribbon, Hystrix, Feign and Zuul).</b></small></li>	  
                               <li><small>Prometheus, Grafana, wmi exporter.</small></li>	  
-			      <li><small>Node Js, Express Js, React Js, Redux, Angular, AngularJs, JQuery and Ajax.</small></li>
+			      <li><small>JavaScript, ES6, Node Js, Express Js, React Js, Redux, Next Js, JQuery and Ajax.</small></li>
+			      <li><small>Bootstrap, Material UI, tailwind UI and StyledComponents</small></li>
                               <li><small>Amazon Web Services <b> (Lambda, API Gateway, Cognito, Kinesis, Glue, Athena, CloudWatch, EC2, IAM and S3).</b></small></li>
                               <li><small>My SQL, MongoDB and Redis.</small></li>
 			      <li><small>Tomcat and Nginx.</small></li>
 			      <li><small>Eslint, Prettier, SonarLint and SonarQube.</small></li>	  
-			      <li><small>Jira, Eclipse, STS, VS Code, Jenkins, WinSCP, PuTTY, PM2, OpenSSL, hashicorp/consul-template, MySQL Workbench, Postman and JMeter.</small></li>
+			      <li><small>Jira, Eclipse, STS, VS Code, GitHub, GitLab, Bitbucket, SVN, Jenkins, WinSCP, PuTTY, PM2, OpenSSL, hashicorp/consul-template, MySQL Workbench, Postman and JMeter.</small></li>
                           </ul>
                           <strong>Education</strong>
                           <ul>
