--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                               <li><small>Spring/SpringBoot Framework <b>(MVC, JDBC, JPA, REST and Security).</b></small></li>
 			      <li><small>Spring Cloud and Microservices, Hashicorp/Consul <b>(Eureka Discovery Server/Client, Configuration, Ribbon, Hystrix, Feign and Zuul).</b></small></li>	  
                               <li><small>Prometheus, Grafana, wmi exporter.</small></li>	  
-			      <li><small>JavaScript, ES6, Node Js, Express Js, React Js, Redux, Next Js, JQuery and Ajax.</small></li>
-			      <li><small>Bootstrap, Material UI, tailwind UI and StyledComponents</small></li>
+			      <li><small>JavaScript, ES6, Node Js, Express Js, React Js, Redux, Next Js, 11ty, Nunjucks, JQuery and Ajax.</small></li>
+			      <li><small>Bootstrap, Material UI, tailwind UI and StyledComponents.</small></li>
                               <li><small>Amazon Web Services <b> (Lambda, API Gateway, Cognito, Kinesis, Glue, Athena, CloudWatch, EC2, IAM and S3).</b></small></li>
                               <li><small>My SQL, MongoDB and Redis.</small></li>
 			      <li><small>Tomcat and Nginx.</small></li>
