--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Ram Full Stack Java/RectJs/NextJs">
+    <!--noindex: attribute instructs the search engines not to index any given page. -->
+    <!--nofollow: attribute instructs not to follow any links on that page. -->
+    <meta name="robots" content="noindex,nofollow">
+
+    
+    <meta property="og:title" content="FullStack Java,NodeJs,ReactJs,NextJs,AWS" />
+    <meta property="og:url" content="https://www.linkedin.com/in/rammohan222"/>
+    <meta property="og:description" content="Fullstack developer with around 9 years of exp, Java, SpringBoot, Spring Cloud, Microservice, NodeJs, ReactJs, NextJs and AWS"/>
+    <meta property="og:image" content="./assets/profile.jpg"/>
+
+
+    <link rel="canonical" href="https://www.linkedin.com/in/rammohan222" />
     <link rel='shortcut icon' href='./assets/profile.jpg' type='image/x-icon' />
    
     <!-- Bootstrap CSS -->
