--- a/index.html
+++ b/index.html
@@ -3,28 +3,32 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="description" content="Ram Full Stack Java/RectJs/NextJs">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="RamaMohanaRao.M | Fullstack Dev Java, NodeJs, ReactJs, NextJs, AWS">
+    <meta name="apple-mobile-web-app-title" content="RamaMohanaRao.M | Fullstack Dev">
+    <meta name="application-name" content="RamaMohanaRao.M | Fullstack Dev">
     <!--noindex: attribute instructs the search engines not to index any given page. -->
     <!--nofollow: attribute instructs not to follow any links on that page. -->
     <meta name="robots" content="noindex,nofollow">
 
-    
-    <meta property="og:title" content="FullStack Java,NodeJs,ReactJs,NextJs,AWS" />
-    <meta property="og:url" content="https://www.linkedin.com/in/rammohan222"/>
-    <meta property="og:description" content="Fullstack developer with around 9 years of exp, Java, SpringBoot, Spring Cloud, Microservice, NodeJs, ReactJs, NextJs and AWS"/>
-    <meta property="og:image" content="./assets/profile.jpg"/>
-
+    <meta property="og:site_name" content="RamaMohanaRao.M | Fullstack Dev">
+    <meta property="og:title" content="RamaMohanaRao.M | FullStack Dev Java, NodeJs, ReactJs, NextJs, AWS" />
+    <meta property="og:url" content="https://www.ram222mohan.com"/>
+    <meta property="og:description" content="Fullstack developer with around 9 years of exp with Java, SpringBoot, Spring Cloud, Microservice, NodeJs, ReactJs, NextJs and AWS"/>
+    <meta property="og:image" content="https://ram222mohan.com/assets/profile.jpg"/>
 
     <link rel="canonical" href="https://www.linkedin.com/in/rammohan222" />
+    <link rel="alternate" hreflang="x-default" href="https://www.ram222mohan.com/index.html">
+    <link rel="alternate" hreflang="en" href="https://www.ram222mohan.com/index.html">
     <link rel='shortcut icon' href='./assets/profile.jpg' type='image/x-icon' />
    
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="./fontawesome-free-5.10.2-web/css/all.css" rel="stylesheet">
     <script defer src="./fontawesome-free-5.10.2-web/js/all.js"></script> 
-<!-- Our project just needs Font Awesome Solid + Brands -->
+    <!-- Our project just needs Font Awesome Solid + Brands -->
     <link href="./fontawesome-free-5.10.2-web/css/fontawesome.css" rel="stylesheet">
     <link href="./fontawesome-free-5.10.2-web/css/brands.css" rel="stylesheet">
     <link href="./fontawesome-free-5.10.2-web/css/solid.css" rel="stylesheet">
