--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:description" content="Fullstack developer with around 9 years of exp with Java, SpringBoot, Spring Cloud, Microservice, NodeJs, ReactJs, NextJs and AWS"/>
     <meta property="og:image" content="https://ram222mohan.com/assets/profile.jpg"/>
 
-    <link rel="canonical" href="https://www.linkedin.com/in/rammohan222" />
+    <link rel="canonical" href="https://www.ram222mohan.com" />
     <link rel="alternate" hreflang="x-default" href="https://www.ram222mohan.com/index.html">
     <link rel="alternate" hreflang="en" href="https://www.ram222mohan.com/index.html">
     <link rel='shortcut icon' href='./assets/profile.jpg' type='image/x-icon' />
