--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <link href="./fontawesome-free-5.10.2-web/css/brands.css" rel="stylesheet">
     <link href="./fontawesome-free-5.10.2-web/css/solid.css" rel="stylesheet">
     
-    <title>Ram Mohan</title>
+    <title>RamaMohanaRao.M | Fullstack Dev</title>
     <style>
     .inline-headers h2, .inline-headers h5 {
       display: inline-block;
